--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,12 +20,10 @@ services:
     ports:
     - 4306:3306
     environment:
-      MYSQL_DATABASE: demo
-      MYSQL_USER: root
-      MYSQL_PASSWORD: password
-      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
-      MYSQL_RANDOM_ROOT_PASSWORD: "false"
-      MYSQL_ROOT_PASSWORD: root
+      PMA_ARBITRARY: 1
+      MYSQL_USER: homestead
+      MYSQL_PASSWORD: secret
+      MYSQL_ROOT_PASSWORD: secret
 
   web:
     build:
@@ -46,8 +44,8 @@ services:
     - DB_HOST=mysql
     - DB_PORT=3306
     - DB_DATABASE=demo
-    - DB_USERNAME=root
-    - DB_PASSWORD=password
+    - DB_USERNAME=homestead
+    - DB_PASSWORD=secret
     - CACHE_DRIVER=redis
     - REDIS_HOST=redis
     - SESSION_DRIVER=redis
