--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
 
   # The Database
   mysql:
+    container_name: mysql
     image: mysql:5.6
     volumes:
     - dbdata:/var/lib/mysql
@@ -20,14 +21,13 @@ services:
     ports:
     - 4306:3306
     environment:
-      MYSQL_DATABASE: demo
-      MYSQL_USER: root
-      MYSQL_PASSWORD: password
-      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
-      MYSQL_RANDOM_ROOT_PASSWORD: "false"
-      MYSQL_ROOT_PASSWORD: root
+      - MYSQL_DATABASE=demo
+      - MYSQL_USER=homestead
+      - MYSQL_PASSWORD=secret
+      - MYSQL_ROOT_PASSWORD=secret
 
   web:
+    container_name: web
     build:
       context: ./docker/web
     working_dir: /var/www/html
@@ -46,8 +46,8 @@ services:
     - DB_HOST=mysql
     - DB_PORT=3306
     - DB_DATABASE=demo
-    - DB_USERNAME=root
-    - DB_PASSWORD=password
+    - DB_USERNAME=homestead
+    - DB_PASSWORD=secret
     - CACHE_DRIVER=redis
     - REDIS_HOST=redis
     - SESSION_DRIVER=redis
