--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:gLmztmxDpv0qMy2s1LGYPPYypWZau7PFMudayxk7g1E=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
