--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,22 +8,17 @@ services:
     container_name: redis
     image: redis:3.2
     ports:
-    - 6380:6379
-  smtp:
-    container_name: smtp
-    image: schickling/mailcatcher
-    ports:
-    - 1080:1080
+      - 6380:6379
 
   # The Database
-  mysql:
-    container_name: mysql
-    image: mysql:5.6
+  database:
+    container_name: database
+    image: mysql
     volumes:
-    - dbdata:/var/lib/mysql
-    command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci
+      - dbdata:/var/lib/mysql
+    command: --default-authentication-plugin=mysql_native_password
     ports:
-    - 4306:3306
+      - 3307:3306
     environment:
       - MYSQL_DATABASE=demo
       - MYSQL_USER=homestead
@@ -36,28 +31,23 @@ services:
       context: ./docker/web
     working_dir: /var/www/html
     volumes:
-    - ./:/var/www/html/
-    - ./docker/web/logs:/var/log/httpd
+      - ./:/var/www/html/
+      - ./docker/web/logs:/var/log/httpd
     ports:
-    - 9090:80
-    links:
-    - mysql
-    - redis
-    - smtp
+      - 9090:80
     depends_on:
-    - mysql
-    - redis
+      - database
+      - redis
     environment:
-    - DB_HOST=mysql
-    - DB_PORT=3306
-    - DB_DATABASE=demo
-    - DB_USERNAME=homestead
-    - DB_PASSWORD=secret
-    - CACHE_DRIVER=redis
-    - REDIS_HOST=redis
-    - SESSION_DRIVER=redis
+      - DB_HOST=database
+      - DB_PORT=3306
+      - DB_DATABASE=demo
+      - DB_USERNAME=homestead
+      - DB_PASSWORD=secret
+      - CACHE_DRIVER=redis
+      - REDIS_HOST=redis
+      - SESSION_DRIVER=redis
     env_file: .env
 
 volumes:
   dbdata:
-  redisdata:
