--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,12 @@ networks:
 
 services:
   redis:
-    container_name: redis
     image: redis:3.2
     ports:
       - 6380:6379
 
   # The Database
-  database:
-    container_name: database
+  mysql:
     image: mysql
     volumes:
       - dbdata:/var/lib/mysql
@@ -26,7 +24,6 @@ services:
       - MYSQL_ROOT_PASSWORD=secret
 
   web:
-    container_name: web
     build:
       context: ./docker/web
     working_dir: /var/www/html
@@ -36,10 +33,10 @@ services:
     ports:
       - 9090:80
     depends_on:
-      - database
+      - mysql
       - redis
     environment:
-      - DB_HOST=database
+      - DB_HOST=mysql
       - DB_PORT=3306
       - DB_DATABASE=demo
       - DB_USERNAME=homestead
