--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,14 @@ networks:
 
 services:
   redis:
-    container_name: redis
+    # container_name: redis
     image: redis:3.2
     ports:
       - 6380:6379
 
   # The Database
   mysql:
-    container_name: mysql
+    # container_name: mysql
     image: mysql
     volumes:
       - dbdata:/var/lib/mysql
@@ -26,7 +26,7 @@ services:
       - MYSQL_ROOT_PASSWORD=secret
 
   web:
-    container_name: web
+    # container_name: web
     build:
       context: ./docker/web
     working_dir: /var/www/html
