Update docker file

--- a/docker/web/vhost.conf
+++ b/docker/web/vhost.conf
@@ -1,12 +1,18 @@
-<VirtualHost *:80>
-    DocumentRoot /var/www/html/public
-    <Directory /var/www/html/>
-         AllowOverride all
-         Options Indexes FollowSymLinks MultiViews
-         Require all granted
-         Header set Access-Control-Allow-Origin "*"
-         Header set Access-Control-Allow-Methods "POST, GET, OPTIONS, DELETE, PUT, PATCH"
-         Header set Access-Control-Max-Age "1000"
-         Header set Access-Control-Allow-Headers "x-requested-with, Content-Type, origin, authorization, accept, client-security-token$"
-    </Directory>
-</VirtualHost>
+server {
+    listen 80;
+    index index.php index.html;
+    root /var/www/html/public;
+
+    location / {
+        try_files $uri /index.php?$args;
+    }
+
+    location ~ \.php$ {
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass app:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+}
