--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,55 +1,65 @@
 version: '3'
-
-networks:
-  default: {}
-
 services:
-  redis:
-    # container_name: redis
-    image: redis:3.2
-    ports:
-      - 6380:6379
 
-  # The Database
-  mysql:
-    # container_name: mysql
-    image: mysql
-    volumes:
-      - dbdata:/var/lib/mysql
-    command: --default-authentication-plugin=mysql_native_password
-    ports:
-      - 3307:3306
-    environment:
-      - MYSQL_DATABASE=demo
-      - MYSQL_USER=homestead
-      - MYSQL_PASSWORD=secret
-      - MYSQL_ROOT_PASSWORD=secret
-
-  web:
-    # container_name: web
+  # The Application
+  app:
+    # container_name: docker_app
     build:
-      context: ./docker/web
+      context: ./docker/app
+      dockerfile: Dockerfile
     working_dir: /var/www/html
     volumes:
-      - ./:/var/www/html/
-      - ./docker/web/logs:/var/log/httpd
-    ports:
-      - 9090:80
+      - ./:/var/www/html
     depends_on:
-      - mysql
+      - database
       - redis
-    links:
-      - mysql
     environment:
-      - DB_HOST=mysql
+      - DB_HOST=database
       - DB_PORT=3306
       - DB_DATABASE=demo
       - DB_USERNAME=homestead
       - DB_PASSWORD=secret
       - CACHE_DRIVER=redis
-      - REDIS_HOST=redis
       - SESSION_DRIVER=redis
     env_file: .env
 
+  # The Web Server
+  web:
+    container_name: laravel_demo_web
+    build:
+      context: ./docker/web
+      dockerfile: Dockerfile
+    depends_on:
+      - app
+    volumes:
+      - ./:/var/www/html
+    ports:
+      - 9090:80
+
+  # The Database
+  database:
+    container_name: docker_db
+    image: mysql:5.7
+    volumes:
+      - jkdbdata:/var/lib/mysql
+    environment:
+      - MYSQL_DATABASE=demo
+      - MYSQL_USER=homestead
+      - MYSQL_PASSWORD=secret
+      - MYSQL_ROOT_PASSWORD=secret
+    ports:
+      - 3307:3306
+    env_file: .env
+
+  # redis
+  redis:
+    # container_name: docker_redis
+    image: redis:4.0-alpine
+    ports:
+      - 6380:6379
+    volumes:
+      - jkredisdata:/data
+
 volumes:
-  dbdata:
+  jkdbdata:
+  jkredisdata:
