--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -30,10 +30,10 @@ RUN groupadd -g 1000 www
 RUN useradd -u 1000 -ms /bin/bash -g www www
 
 # Copy existing application directory contents
-COPY . /var/www
+COPY . /var/www/html
 
 # Copy existing application directory permissions
-COPY --chown=www:www . /var/www
+COPY --chown=www:www . /var/www/html
 
 # Change current user to www
 USER www
