--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -25,18 +25,20 @@ RUN curl -sL https://deb.nodesource.com/setup_10.x | bash
 RUN apt-get install nodejs -y
 RUN npm install -g yarn
 
-# Add user for laravel application
-RUN groupadd -g 1000 www
-RUN useradd -u 1000 -ms /bin/bash -g www www
+# # Add user for laravel application
+# RUN groupadd -g 1000 www
+# RUN useradd -u 1000 -ms /bin/bash -g www www
 
-# Copy existing application directory contents
+# # Copy existing application directory contents
+# COPY . /var/www/html
+
+# # Copy existing application directory permissions
+# COPY --chown=www:www . /var/www/html
+
+# # Change current user to www
+# USER www
 COPY . /var/www/html
-
-# Copy existing application directory permissions
-COPY --chown=www:www . /var/www/html
-
-# Change current user to www
-USER www
+RUN chown -R www-data:www-data /var/www/html
 
 # Expose port 9000 and start php-fpm server
 EXPOSE 9000
