--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     depends_on:
       - database
       - redis
+      - composer
     environment:
       - DB_HOST=database
       - DB_PORT=3306
